# automated-cover-control

./: .pre-commit-config.yaml  COPYING  pyproject.toml
custom_components/automated_cover_control/: __init__.py  binary_sensor.py  button.py  calculation.py  config.py  config_flow.py  const.py  coordinator.py  diagnostics.py  log_context_adapter.py  manifest.json  manual_override_manager.py  sensor.py  sun.py  switch.py  util.py  why.py
tests/: __init__.py  conftest.py  test_binary_sensor.py  test_button.py  test_calculation.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_manual_override_manager.py  test_sensor.py  test_sun.py  test_switch.py  test_util.py
