[project]
name = "automated-cover-control"
version = "0.1.0"
description = "Automated cover control for Home Assistant"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["COPYING"]
authors = [
    { name = "Tarick Bedeir", email = "tarick@bedeir.com" }
]
dependencies = [
    "homeassistant",
    "pandas",
]

[project.optional-dependencies]
test = [
    "PyTurboJPEG",
    "hassil",
    "home-assistant-intents",
    "mutagen",
    "pytest",
    "pytest-cov",
    "pytest-homeassistant-custom-component",
    "time_machine",
]

[project.urls]
github = "https://github.com/tarickb/automated-cover-control.git"

[tool.pytest.ini_options]
log_file = "pytest_debug.log"
log_file_level = "INFO"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes
    "W",        # pycodestyle warnings
    "E",        # pycodestyle errors
    "I",        # isort
    "UP",       # pyupgrade
    "C4",       # flake8-comprehensions
    "FA",       # flake8-future-annotations
    "ISC",      # flake8-implicit-str-concat
    "ICN",      # flake8-import-conventions
    "RET",      # flake8-return
    "SIM",      # flake8-simplify
    "TID",      # flake8-tidy-imports
    "TC",       # flake8-type-checking
    "PTH",      # flake8-use-pathlib
    "TD",       # flake8-todos
    "NPY",      # NumPy-specific rules
]

extend-ignore = [
    "E501",  # line-too-long
    "TC002", # typing-only-third-party-import
    "TC003", # typing-only-standard-library-import
    "TD003", # missing-todo-link
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101", # assert
]
